--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>LikeMe</title>
+    <title>Like it</title>
 </head>
 <body>
 
-    <h1>LikeME!</h1>
+    <h1>Like It!</h1>
     <div id="load"></div>
     <div id="box">
         <div class="cards" id="cardA">
