--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 </head>
 <body>
 
-    <h1>Like It!</h1>
-    <div id="load"></div>
     <div id="box">
         <div class="cards" id="cardA">
-            <img class="imgCard" src="./images/foodLeft.jpg" alt="" srcset="">
+            <img class="imgCard" src="./images/foodLeft.jpg" alt="card test">
             <span class="textBox1">
                 <h2>Card Left</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut voluptas ratione, repellat necessitatibus architecto voluptatem unde. Nulla, optio!</p>    
             </span>
-            <a class="my-button" href="#">Add to cart</a>
+            <div class="my-button">Add to cart</div>
             <div id="l1" class="boxLiked"></div>
             <img id="h1" class="heart" onclick="likeMe1()" src="./images/heart0.png" alt="" srcset="">
         </div>
@@ -47,6 +45,8 @@
 
     </div>
 
+    <h1>Like It!</h1>
+    <div id="load"></div>
     <footer>by Fateh - 🧑🏻‍💻 My <a href="https://www.linkedin.com/in/fatehelboucherour/">LinkedIn</a></footer>
 
     <script src="./app.js"></script>
