--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 
+    <h1>Like It!</h1>
+    <div id="load"></div>
+    <p>Another way to put a LIKE ❤️ on the web</p>
+
+    <footer>by Fateh - 🧑🏻‍💻 My <a href="https://www.linkedin.com/in/fatehelboucherour/">LinkedIn</a> and <a href="">my Twitter</a></footer>
+
+
     <div id="box">
         <div class="cards" id="cardA">
             <img class="imgCard" src="./images/foodLeft.jpg" alt="card test">
@@ -45,9 +52,6 @@
 
     </div>
 
-    <h1>Like It!</h1>
-    <div id="load"></div>
-    <footer>by Fateh - 🧑🏻‍💻 My <a href="https://www.linkedin.com/in/fatehelboucherour/">LinkedIn</a></footer>
 
     <script src="./app.js"></script>
 </body>
