--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>Card Center</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut voluptas ratione, repellat necessitatibus architecto voluptatem unde. Nulla, optio!</p>    
             </span>
-            <a class="my-button" href="#">Add to cart</a>
+            <div class="my-button">Add to cart</div>
             <div id="l3"></div>
             <img id="h3" class="heart" onclick="likeMe3()" src="./images/heart0.png" alt="" srcset="">
         </div>
@@ -45,7 +45,7 @@
                 <h2>Card Right</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut voluptas ratione, repellat necessitatibus architecto voluptatem unde. Nulla, optio!</p>    
             </span>
-            <a class="my-button" href="#">Add to cart</a>
+            <div class="my-button">Add to cart</div>
             <div id="l2"></div>
             <img id="h2" class="heart" onclick="likeMe2()" src="./images/heart0.png" alt="" srcset="">
         </div>
